check code bef const